[gd_scene load_steps=3 format=3 uid="uid://yr6blo67fin6"]

[ext_resource type="Script" path="res://tools/character sheet tool/character_builder.gd" id="1_lfn10"]
[ext_resource type="Script" path="res://hud/Classes/NumberInput/NumberInput.gd" id="1_u76ax"]

[node name="Character Builder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfn10")

[node name="Page 1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="DisplayName" type="LineEdit" parent="Page 1"]
layout_mode = 0
offset_right = 576.0
offset_bottom = 31.0
placeholder_text = "Display Name"

[node name="Description" type="TextEdit" parent="Page 1"]
layout_mode = 0
offset_top = 31.0
offset_right = 576.0
offset_bottom = 208.0
placeholder_text = "Description"

[node name="Race" type="Control" parent="Page 1"]
anchors_preset = 0
offset_top = 208.0
offset_right = 311.0
offset_bottom = 248.0

[node name="Label" type="Label" parent="Page 1/Race"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_vertical = 2
text = "Race: "

[node name="OptionButton" type="OptionButton" parent="Page 1/Race"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2

[node name="Ethics" type="Control" parent="Page 1"]
anchors_preset = 0
offset_top = 248.0
offset_right = 311.0
offset_bottom = 288.0

[node name="Label" type="Label" parent="Page 1/Ethics"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_vertical = 2
text = "Ethics: "

[node name="OptionButton" type="OptionButton" parent="Page 1/Ethics"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2

[node name="Morals" type="Control" parent="Page 1"]
anchors_preset = 0
offset_top = 288.0
offset_right = 311.0
offset_bottom = 328.0

[node name="Label" type="Label" parent="Page 1/Morals"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_vertical = 2
text = "Morals: "

[node name="OptionButton" type="OptionButton" parent="Page 1/Morals"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2

[node name="Languages" type="TextEdit" parent="Page 1"]
layout_mode = 0
offset_top = 328.0
offset_right = 576.0
offset_bottom = 366.0
placeholder_text = "Languages"

[node name="Senses" type="TextEdit" parent="Page 1"]
layout_mode = 0
offset_top = 366.0
offset_right = 576.0
offset_bottom = 404.0
placeholder_text = "Senses
"

[node name="Page 2" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Level" type="Control" parent="Page 2"]
layout_mode = 3
anchors_preset = 0
offset_right = 311.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Page 2/Level"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_vertical = 2
text = "Level: "

[node name="Value" type="TextEdit" parent="Page 2/Level"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -14.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
text = "1"
placeholder_text = "Level"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="Health" type="Control" parent="Page 2"]
layout_mode = 3
anchors_preset = 0
offset_top = 80.0
offset_right = 311.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="Page 2/Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_vertical = 2
text = "Health:"

[node name="Value" type="TextEdit" parent="Page 2/Health"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -14.5
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 2
text = "30"
placeholder_text = "Health Points"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="Stagger" type="Control" parent="Page 2"]
layout_mode = 3
anchors_preset = 0
offset_top = 120.0
offset_right = 311.0
offset_bottom = 160.0

[node name="Label" type="Label" parent="Page 2/Stagger"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_vertical = 2
text = "Stagger:"

[node name="Value" type="TextEdit" parent="Page 2/Stagger"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -14.5
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 2
text = "15"
placeholder_text = "Stagger Resist"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="ProfBonus" type="Control" parent="Page 2"]
layout_mode = 3
anchors_preset = 0
offset_top = 330.0
offset_right = 344.0
offset_bottom = 370.0

[node name="Label" type="Label" parent="Page 2/ProfBonus"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_vertical = 2
text = "Prof Bonus:"

[node name="Value" type="TextEdit" parent="Page 2/ProfBonus"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -14.0
offset_right = -162.0
offset_bottom = 23.0
grow_horizontal = 0
grow_vertical = 2
text = "2"
placeholder_text = "Proficiency Bonus"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="Stats" type="Control" parent="Page 2"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="STR" type="Control" parent="Page 2/Stats"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 0
offset_top = 395.0
offset_right = 400.0
offset_bottom = 435.0

[node name="Label" type="Label" parent="Page 2/Stats/STR"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "STRENGTH:"

[node name="CheckButton" type="CheckButton" parent="Page 2/Stats/STR"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -15.0
offset_right = -71.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Prof:"

[node name="Value" type="TextEdit" parent="Page 2/Stats/STR"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="DEX" type="Control" parent="Page 2/Stats"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 0
offset_top = 443.0
offset_right = 400.0
offset_bottom = 483.0

[node name="Label" type="Label" parent="Page 2/Stats/DEX"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "DEXTERITY:"

[node name="CheckButton" type="CheckButton" parent="Page 2/Stats/DEX"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -15.0
offset_right = -71.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Prof:"

[node name="Value" type="TextEdit" parent="Page 2/Stats/DEX"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0625
offset_top = -15.5
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
text = "1"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="CON" type="Control" parent="Page 2/Stats"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 0
offset_top = 485.0
offset_right = 400.0
offset_bottom = 525.0

[node name="Label" type="Label" parent="Page 2/Stats/CON"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "CONSTITUTION:"

[node name="CheckButton" type="CheckButton" parent="Page 2/Stats/CON"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -15.0
offset_right = -71.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Prof:"

[node name="Value" type="TextEdit" parent="Page 2/Stats/CON"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0625
offset_top = -15.5
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
text = "1"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="INT" type="Control" parent="Page 2/Stats"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 0
offset_top = 525.0
offset_right = 400.0
offset_bottom = 565.0

[node name="Label" type="Label" parent="Page 2/Stats/INT"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "INTELLIGENCE:"

[node name="CheckButton" type="CheckButton" parent="Page 2/Stats/INT"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -15.0
offset_right = -71.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Prof:"

[node name="Value" type="TextEdit" parent="Page 2/Stats/INT"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0625
offset_top = -15.5
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
text = "1"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="WIS" type="Control" parent="Page 2/Stats"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 0
offset_top = 563.0
offset_right = 400.0
offset_bottom = 603.0

[node name="Label" type="Label" parent="Page 2/Stats/WIS"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "WISDOM:"

[node name="CheckButton" type="CheckButton" parent="Page 2/Stats/WIS"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -15.0
offset_right = -71.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Prof:"

[node name="Value" type="TextEdit" parent="Page 2/Stats/WIS"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0625
offset_top = -15.5
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
text = "1"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="CHA" type="Control" parent="Page 2/Stats"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 0
offset_top = 605.0
offset_right = 400.0
offset_bottom = 645.0

[node name="Label" type="Label" parent="Page 2/Stats/CHA"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "CHARISMA:"

[node name="CheckButton" type="CheckButton" parent="Page 2/Stats/CHA"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -15.0
offset_right = -71.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Prof:"

[node name="Value" type="TextEdit" parent="Page 2/Stats/CHA"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0625
offset_top = -15.5
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
text = "1"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")
is_integer = true

[node name="Resistances" type="Control" parent="Page 2"]
layout_mode = 1
anchors_preset = 0
offset_left = 693.0
offset_right = 693.0
metadata/_edit_lock_ = true

[node name="Slash" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Page 2/Resistances/Slash"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Slash Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Slash"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Pierce" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 41.0
offset_right = 400.0
offset_bottom = 81.0

[node name="Label" type="Label" parent="Page 2/Resistances/Pierce"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Pierce Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Pierce"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Blunt" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 80.0
offset_right = 400.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="Page 2/Resistances/Blunt"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Blunt  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Blunt"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Cold" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 152.0
offset_right = 400.0
offset_bottom = 192.0

[node name="Label" type="Label" parent="Page 2/Resistances/Cold"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Cold  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Cold"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Fire" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 193.0
offset_right = 400.0
offset_bottom = 233.0

[node name="Label" type="Label" parent="Page 2/Resistances/Fire"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Fire  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Fire"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Force" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 233.0
offset_right = 400.0
offset_bottom = 273.0

[node name="Label" type="Label" parent="Page 2/Resistances/Force"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Force  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Force"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Lightning" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 273.0
offset_right = 400.0
offset_bottom = 313.0

[node name="Label" type="Label" parent="Page 2/Resistances/Lightning"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Lightning  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Lightning"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Necrotic" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 313.0
offset_right = 400.0
offset_bottom = 353.0

[node name="Label" type="Label" parent="Page 2/Resistances/Necrotic"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Necrotic  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Necrotic"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Poison" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 353.0
offset_right = 400.0
offset_bottom = 393.0

[node name="Label" type="Label" parent="Page 2/Resistances/Poison"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Poison  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Poison"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Psychic" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 392.0
offset_right = 400.0
offset_bottom = 432.0

[node name="Label" type="Label" parent="Page 2/Resistances/Psychic"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Psychic  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Psychic"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Radiant" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 431.0
offset_right = 400.0
offset_bottom = 471.0

[node name="Label" type="Label" parent="Page 2/Resistances/Radiant"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Radiant  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Radiant"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Noise" type="Control" parent="Page 2/Resistances"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 472.0
offset_right = 400.0
offset_bottom = 512.0

[node name="Label" type="Label" parent="Page 2/Resistances/Noise"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 87.0
offset_bottom = 13.0
grow_vertical = 2
text = "Noise  Resistance:"

[node name="Value" type="TextEdit" parent="Page 2/Resistances/Noise"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "1.0"
placeholder_text = "INT"
scroll_fit_content_height = true
script = ExtResource("1_u76ax")

[node name="Page 3" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Skills" type="Control" parent="Page 3"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Page 3/Skills"]
layout_mode = 0
offset_right = 82.0
offset_bottom = 26.0
text = "Skills List:"

[node name="List" type="ItemList" parent="Page 3/Skills"]
layout_mode = 0
offset_top = 26.0
offset_right = 343.0
offset_bottom = 170.0
allow_search = false

[node name="Search Bar" type="LineEdit" parent="Page 3/Skills"]
layout_mode = 0
offset_top = 255.0
offset_right = 337.0
offset_bottom = 286.0
placeholder_text = "Search"

[node name="Search Result" type="ItemList" parent="Page 3/Skills"]
layout_mode = 0
offset_top = 288.0
offset_right = 337.0
offset_bottom = 491.0
allow_search = false

[node name="NextPage" type="Button" parent="."]
layout_mode = 0
offset_left = 1093.0
offset_top = 614.0
offset_right = 1138.0
offset_bottom = 645.0
text = "Next"

[node name="PrevPage" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1047.0
offset_top = 614.0
offset_right = 1090.0
offset_bottom = 645.0
text = "Prev"

[node name="Generate" type="Button" parent="."]
layout_mode = 0
offset_left = 919.0
offset_top = 614.0
offset_right = 999.0
offset_bottom = 645.0
text = "Generate"

[connection signal="item_selected" from="Page 3/Skills/List" to="." method="_on_skill_list_item_selected"]
[connection signal="text_changed" from="Page 3/Skills/Search Bar" to="." method="_on_search_bar_text_changed"]
[connection signal="item_selected" from="Page 3/Skills/Search Result" to="." method="_on_search_result_item_selected"]
[connection signal="pressed" from="NextPage" to="." method="_on_next_page_pressed"]
[connection signal="pressed" from="Generate" to="." method="_on_generate_pressed"]
